# profiler

./: CMakeLists.txt  mod.json
fxprof/: CMakeLists.txt
fxprof/include/fxprof/: Category.hpp  CategoryColor.hpp  CpuDelta.hpp  Frame.hpp  FrameTable.hpp  FuncTable.hpp  GlobalLibTable.hpp  IndexSet.hpp  LibMappings.hpp  LibraryInfo.hpp  MarkerTable.hpp  NativeSymbols.hpp  Process.hpp  Profile.hpp  ReferenceTimestamp.hpp  ResourceTable.hpp  SampleTable.hpp  StringTable.hpp  Thread.hpp  Timestamp.hpp
fxprof/tests/: main.cpp
src/: FirefoxProfile.hpp  Profiler.hpp  main.cpp
src/fxprof/: Category.hpp  Counter.hpp  FrameTable.hpp  FuncTable.hpp  GlobalLibTable.hpp  IndexSet.hpp  LibMappings.hpp  LibraryInfo.hpp  Profile.hpp  ReferenceTimestamp.hpp  ResourceTable.hpp  StackTable.hpp  StringTable.hpp
src/fxprof/markers/: Internal.hpp  Types.hpp
src/gecko/: Markers.hpp  Profile.hpp
src/platform/: IPlatform.hpp  Windows.cpp
